# prbot-hermes

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  NEXT-SESSION.md  README.md  plan-1-agente-hermes.md  pyproject.toml
.github/workflows/: ci.yml
config/guardrails/: repo-allowlist.yaml
config/hermes/: config.yaml
deploy/: .env.example  install-notes.md
deploy/systemd/: hermes-approval-bot.service  hermes-arq-worker.service  hermes-gateway.service
docs/: cutover.md  n8n-inventory.md  runbook.md
docs/adr/: ADR-0001-repo-bootstrap.md  ADR-0002-hermes-deploy.md  ADR-0003-migration-map.md  ADR-0004-github-guardrails.md  ADR-0005-worker-language.md  ADR-0006-worker-language-python-arq.md  ADR-0007-queue-hardening.md  ADR-0008-capabilities.md  ADR-0009-recurring-digest.md  ADR-0010-n8n-parity.md  ADR-0011-cutover.md
hermes_queue/: __init__.py  approval_bot.py  deadletter.py  discord_client.py  events.py  github_client.py  guardrails.py  mcp_server.py  poll_state.py  settings.py
hermes_queue/jobs/: __init__.py  alerts.py  apply_labels.py  digest.py  gate.py  post_comment.py  reports.py
hermes_queue/workers/: __init__.py  post_comment_worker.py
queue/: .gitignore  package-lock.json  package.json  tsconfig.json
queue/lib/: queues.ts  redis.ts
