[project]
name = "team-agent-ops"
version = "0.1.0"
description = "Operations repo for Hermes Agent + arq task queue and n8n migration"
requires-python = ">=3.11"
dependencies = [
    "arq>=0.28.0",
]

[dependency-groups]
# Herramientas de desarrollo; uv las instala al correr `uv run`.
dev = ["ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
